# interline-routes

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ap2_settle.py  arbitrum_settle.py  gen_evm_facilitator.py  glama.json  pyproject.toml  requirements.txt  run_demo.py  run_live.py  run_mpp_live.py  run_v1_dogfood.py  selftest_ap2_adapter.py  selftest_mpp_rail.py  selftest_network_routing.py  selftest_v3_rails.py  server.json  setup_solana.py  setup_tempo.py  solana_settle.py  wrangler.jsonc
examples/: README.md  gate_endpoint.py  langchain_tool.py  pay_client.py
landing/: index.html
mcp_router/: README.md  __init__.py  discovery.py  selftest.py  server.py
router/: buyer.py  config.py  facilitator_mock.py  facilitator_real.py  ledger.py  paywall.py  seller.py  wallet.py
router/inbound/: ap2_adapter.py
router/rails/: __init__.py  base.py  mpp_rail.py  x402_rail.py
wallet/: README.md  package-lock.json  package.json  tsconfig.json
wallet/src/: walletWorker.ts
website/: mkdocs.yml
website/docs/: go-live.md  index.md  mcp.md  quickstart.md  rails.md  trust-model.md
