[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interline"
version = "0.1.2"
description = "Neutral, non-custodial MCP server that lets any AI agent pay across payment rails (x402 today, more landing) through one integration — rail-discovery + routing + a unified receipt ledger."
readme = "mcp_router/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "x402", "agent-payments", "payment-router", "agentic-payments", "non-custodial", "usdc", "ai-agent"]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.28",
    "x402>=2.13",
    "eth-account>=0.13",
    "web3>=7.0",
    "fastapi>=0.110",
]

# router.paywall / router.seller expose the HTTP Paywall (FastAPI). The MPP/Tempo
# (pympp) and Solana (solders) rail SDKs are lazy-imported — only needed when that
# rail is actually used — so they stay out of the base install. `uvicorn` (to serve
# the Paywall as a process) is the one optional extra.
[project.optional-dependencies]
server = ["uvicorn>=0.27"]

[project.scripts]
# how MCP clients launch it: `uvx interline` (stdio MCP server)
interline = "mcp_router.server:main"

# auto-discover all subpackages (router.rails / router.inbound were silently
# omitted by a static ["mcp_router","router"] list -> clean-install Paywall(...)
# hit ModuleNotFoundError: router.rails. find scopes to the two top packages.)
[tool.setuptools.packages.find]
include = ["mcp_router*", "router*"]
